maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:48: error: unclosed comment
/*
^PledgeMaze:48: error: unclosed comment
/*
^PledgeMaze:48: error: unclosed comment
/*
^PledgeMaze:2: error: Missing closing brace `}' assumed here
var sommeAngle=0
^PledgeMaze:2: error: expected class or object definition
var sommeAngle=0
^PledgeMaze:4: error: expected start of definition
override def run(){
         ^PledgeMaze:14: error: expected class or object definition
def contourne(){
^PledgeMaze:22: error: expected class or object definition
def keepHandOnSideWall(){
^PledgeMaze:32: error: expected class or object definition
def isDirectionFree(dir : Direction) : Boolean = {
^PledgeMaze:48: error: unclosed comment
/*
^